[AF] Fix label vertical alignment on Autofill dropdown

This changes the cross axis alignment for the suggestion view's
BoxLayout to CROSS_AXIS_ALIGNMENT_STRETCH, so that labels will
vertically center themselves on the view.

Screenshots (Googlers only): https://drive.google.com/open?id=1Cfn9vBcJahBGj9oSl_5xRwBt9LDINa60

Bug: 850971
Change-Id: I877988889a6d0a3a07dbca34cb194bd3eef0668a
Reviewed-on: https://chromium-review.googlesource.com/1142371
Reviewed-by: Evan Stade <estade@chromium.org>
Commit-Queue: Fabio Tirelo <ftirelo@chromium.org>
Cr-Commit-Position: refs/heads/master@{#576517}
Former-commit-id: 1f98e67b8bded614f51fc1a8d3104abb07b6f405